syntax = "proto3";

package com.spot.exchange;

option java_package = "com.spot.exchange.proto";
option java_multiple_files = true;

message OrderRequestPayload {
  string id = 1;
  int32 order_action = 2;
  int64 timestamp = 3;
  int64 order_id = 4;
  int32 side = 5;
  int32 order_type = 6;
  int32 quantity = 7;
  int32 price = 8;
  int64 created_at = 9;
}